--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <script type="text/javascript" src="jquery-1.4.4.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
 </head>
 
 <body>
