Committing once again

--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="js/ui.js"></script>
   <script type="text/javascript" src="js/blog.js"></script>
   <script type="text/javascript" src="js/client.js"></script>
+  <script type="text/javascript" src="js/state.js"></script>
 
   <script id="template-excerpt" type="text/html">
     <div id="{{id}}">
