--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,15 @@
   <meta name="viewport" content="width=device-width">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" type="text/css" href="css/default.css">
-  <script type="text/javascript" src="js/jquery-1.4.4.min.js"></script>
-  <script type="text/javascript" src="js/mustache-100644.js"></script>
-  <script type="text/javascript" src="js/errorCodes.js"></script>
-  <script type="text/javascript" src="js/ui.js"></script>
-  <script type="text/javascript" src="js/blog.js"></script>
-  <script type="text/javascript" src="js/client.js"></script>
-  <script type="text/javascript" src="js/state.js"></script>
+  <link rel="stylesheet" type="text/css" href="/css/default.css">
+  <script type="text/javascript" src="/js/jquery-1.4.4.min.js"></script>
+  <script type="text/javascript" src="/js/mustache-100644.js"></script>
+  <script type="text/javascript" src="/js/config.js"></script>
+  <script type="text/javascript" src="/js/errorCodes.js"></script>
+  <script type="text/javascript" src="/js/ui.js"></script>
+  <script type="text/javascript" src="/js/blog.js"></script>
+  <script type="text/javascript" src="/js/client.js"></script>
+  <script type="text/javascript" src="/js/state.js"></script>
 
   <script id="template-excerpt" type="text/html">
     <div id="{{id}}">
@@ -30,7 +31,7 @@
         </div>
         
         <div class="story-readmore">
-            <a href="/{{id}}" onclick="client.displayStory('{{id}}'); return false;">Click here to read the full story!</a>
+            <a href="/article/{{id}}" onclick="client.displayStory('{{id}}'); return false;">Click here to read the full story!</a>
         </div>
         
     </div>
