Changing how I do stuff

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
   <script id="template-excerpt" type="text/html">
     {{=<% %>=}}
-    <div id="{{id}}">
+    <div id="{{id}}" class="hidden">
         <div class="story-headline">
             {{title}}
         </div>
@@ -41,7 +41,7 @@
 
   <script id="template-story" type="text/html">
   {{=<% %>=}}
-    <div id="{{id}}">
+    <div id="{{id}}" class="hidden">
         <div class="story-headline">
             {{title}}
         </div>
