Added a utilities function, starting to work on displaying an individual story from the home page

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="/css/default.css">
 
   <script type="text/javascript" src="/js/jquery-1.4.4.min.js"></script>
+  <script type="text/javascript" src="/js/utilities.js"></script>
   <script type="text/javascript" src="/js/mustache-100644.js"></script>
   <script type="text/javascript" src="/js/config.js"></script>
   <script type="text/javascript" src="/js/errorCodes.js"></script>
