Some general clean-up

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     {{=<% %>=}}
     <div id="{{id}}" class="hidden">
         <div class="story-headline">
-            <a href="/article/{{id}}" onclick="client.displayStory('{{id}}'); return false;">{{title}}</a>
+            <a href="/article/{{id}}" onclick="client.displayStoryFromHome('{{id}}'); return false;">{{title}}</a>
         </div>
         
         <div class="story-byline">
