Changed excerpt handling

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         </div>
         
         <div class="story-excerpt">
-            {{content}}
+            {{excerpt}}
         </div>
         
         <a href="/article/{{id}}" class="story-readmore" onclick="client.displayStoryFromHome('{{id}}'); return false;">read the full story &raquo;</a>
