--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,14 @@
         <div class="story-full">
             {{content}}
         </div>
+        
+        <script>
+        var idcomments_acct = '65b747c511858417522dbbe2f72ab6ea';
+        var idcomments_post_id;
+        var idcomments_post_url;
+        </script>
+        <span id="IDCommentsPostTitle" style="display:none"></span>
+        <script type='text/javascript' src='http://www.intensedebate.com/js/genericCommentWrapperV2.js'></script>
     </div>
     <%={{ }}=%>
   </script>
