Work towards paging

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,22 @@
   <script type="text/javascript" src="/js/blog.js"></script>
   <script type="text/javascript" src="/js/client.js"></script>
 
+  <script id="template-firehose-twitter" type="text/html">
+    {{=<% %>=}}
+    <div id="{{id}}" class="firehose-storylet">
+    
+    </div>
+    <%={{ }}=%>
+  </script>
+
+  <script id="template-show-more-articles" type="text/html">
+    {{=<% %>=}}
+    <div id="show-more-articles" class="hidden">
+        <a href="#" onclick="return false;">Show More Articles</a>
+    </div>
+    <%={{ }}=%>
+  </script>
+
   <script id="template-excerpt" type="text/html">
     {{=<% %>=}}
     <div id="{{id}}" class="homepage-story-container hidden">
