add typekit stuff

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
   <script type="text/javascript" src="/js/ui.js"></script>
   <script type="text/javascript" src="/js/blog.js"></script>
   <script type="text/javascript" src="/js/client.js"></script>
+  
+  <script type="text/javascript" src="http://use.typekit.com/jgr4fod.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <script id="template-story-small" type="text/html">
     {{=<% %>=}}
