header can be clicked and has subtle hover effect

--- a/public/index.html
+++ b/public/index.html
@@ -128,33 +128,33 @@
     <!-- FIXME: restore error handling div -->
     <!-- <div id="errors" style="display: none"></div> -->
     
-    <div id="header">Set Direction Blog</div>
+    <h1><a href="/" onclick="client.displayStoriesFromAnywhere(); return false">Set Direction Blog</a></h1>
 
-        <div id="main-page">
+    <div id="main-page">
 
-            <!-- contains the "firehouse" side stream -->
-            <div id="side-content">
-                <div id="items"></div>
-            </div>
-
-            <!-- contains the "main" content of the page: stories or a story detail -->
-            <div id="main-content">
-                <div id="stories"></div>
-            </div>
-
+        <!-- contains the "firehouse" side stream -->
+        <div id="side-content">
+            <div id="items"></div>
         </div>
+
+        <!-- contains the "main" content of the page: stories or a story detail -->
+        <div id="main-content">
+            <div id="stories"></div>
+        </div>
+
+    </div>
         
-        <div id="story-page">
+    <div id="story-page">
 
-            <div id="story-side-content">
-                <div id="story-items"></div>
-            </div>
-
-            <div id="story-content">
-                <div id="story"></div>
-            </div>
-
+        <div id="story-side-content">
+            <div id="story-items"></div>
         </div>
+
+        <div id="story-content">
+            <div id="story"></div>
+        </div>
+
+    </div>
 
     <script>    
     // -- Google Analytics
