--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,7 @@
     <!-- FIXME: restore error handling div -->
     <!-- <div id="errors" style="display: none"></div> -->
     
-    <h1><a href="/" onclick="client.displayStoriesFromAnywhere(); return false">Set Direction Blog</a></h1>
+    <h1><a href="/" onclick="client.displayStoriesFromAnywhere(); return false">Software Matters <span style="color:#999">@</span> Set Direction</a></h1>
 
     <div id="main-page">
 
