--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     {{=<% %>=}}
     <div id="small-{{id}}" class="story-small {{specialClass}}">
         <div class="story-small-headline">{{title}}</div>
-        <div class="story-small-excerpt">{{excerpt}}</div>
+        <div class="story-small-excerpt">{{{excerpt}}}</div>
     </div>
     <%={{ }}=%>
   </script>
